# biosequence_encoding

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt.old  run_analysis_BRCA.py  setup.py
EDA/: Data_Analysis_BRCA.ipynb  Data_Analysis_transcripts.ipynb  LASSO.R  dataset_generation.R
app/: generate_data.py  generate_data_brca.py  generate_data_cptac_3.py  merge_datasets.py  train.py  train_transfert_learning.py
autoencoder_optimiser/: __init__.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  rna_code.data.html  rna_code.html  rna_code.models.html  rna_code.utils.html  search.html  searchindex.js
external_aproach/: VQ-VAE-2_parkinson.ipynb  VQ-VAE_Subtyping_cancer.ipynb  VQ-VAE_Subtyping_git.ipynb  VQ-VAE_Subtyping_transcripts.ipynb
model_training/: CNN.ipynb  ConvVAE.ipynb  FC_VAE.ipynb  FC_autoencoder.ipynb  GA.ipynb  GA_CNN.ipynb  GA_MLP.ipynb  GA_transformer.ipynb  LSTM.ipynb  LSTM_transpose.ipynb  Transformers.ipynb  cnn.ipynb  feed_forward.ipynb  from_BRCA_to_PPMI.ipynb  torch_training.ipynb
post_training_analysis/: cancer_encoding_analysis.R  cell_encoding_analysis.R  time_series_encoding_analysis.R
preprocess/: Data_Analysis.ipynb  Data_Analysis_cancer.ipynb  Data_Analysis_genes.ipynb  Data_Analysis_transcripts.ipynb
rna_code/: __init__.py  config.json
src/: 4.2.0  LASSO.R  __init__.py  dataset_generation.R  pipeline_0_data_analysis.ipynb  pipeline_1_ConvVAE.ipynb  pipeline_1_LSTM.ipynb  pipeline_1_LSTM_transpose.ipynb  pipeline_1_TPM_train_model.ipynb  pipeline_1_VAE.ipynb  (+9 more)
(+123 files in other folders)
